[package]
name = "gossip"
version = "0.1.0"
authors = ["Joachim Neu <jneu@stanford.edu>"]
edition = "2018"
publish = false

[dependencies]
libp2p = { version = "0.36.0", features = ["gossipsub", "ping"] }
tokio = { version = "1.3.0", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
log = "0.4.0"
ed25519-dalek = "1.0.1"
thiserror = "1.0.21"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"

